# converter

./: .env.api.example  .env.example  .env.worker.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  REPO_MAP.md  docker-compose.api.yml  docker-compose.worker.yml  docker-compose.yml  embed-player.html  ffmpeg  pimor.online.conf  ptrack.ink.conf  шпаргалка  шпаргалка.md
.claude/: settings.local.json
.githooks/: commit-msg  pre-commit
api/: Dockerfile  go.mod  go.sum
docs/admin/: ADMIN_PANEL.md  admin-overview.md
docs/api/: player-movie-api.md
docs/architecture/: 00-system-overview.md  (+10 more)
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json
player/: .env.example  Dockerfile  docker-compose.yml  next.config.mjs  package-lock.json  package.json
scanner/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
scanner/scanner/: config.py  constants.py  db.py  main.py
scanner/scanner/api/: converter_client.py  server.py
scanner/scanner/loops/: download_worker.py  move_worker.py  poll_loop.py  scan_loop.py
scanner/scanner/migrations/: 001_initial.sql  002_add_claim_columns.sql  003_downloads_table.sql  004_downloads_proxy.sql  005_series_support.sql
scanner/scanner/services/: duplicates.py  metadata.py  quality.py  series_detect.py  stability.py
scanner/tests/: test_converter_client.py  test_duplicates.py  test_metadata.py  test_quality.py  test_scanner_api.py  test_stability.py
scripts/: migrate-brackets-to-parens.sh  new-adr.sh  re-resolve-tmdb.py
shared/: go.mod
worker/: Dockerfile  go.mod  go.sum
(+199 files in other folders)
