[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scanner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9",
    "guessit>=3.8",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*"]
